--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -66,27 +66,41 @@
               <ion-icon slot="start" name="git-compare-outline"></ion-icon>
               <ion-label>Stock Entry</ion-label>
             </ion-item>
-            <ion-item
-              *ngIf="loggedIn && showSettings"
-              (click)="isSettingMenuVisible = !isSettingMenuVisible"
-              routerLink="/settings"
-              lines="none"
-              routerLinkActive="active"
+          </ion-menu-toggle>
+          <ion-item
+            *ngIf="loggedIn && showSettings"
+            (click)="isSettingMenuVisible = !isSettingMenuVisible"
+            lines="none"
+          >
+            <ion-icon slot="start" name="settings"></ion-icon>
+            <ion-icon
+              name="chevron-down-outline"
+              *ngIf="!isSettingMenuVisible"
+              slot="end"
+            ></ion-icon>
+            <ion-icon
+              name="chevron-up-outline"
+              *ngIf="isSettingMenuVisible"
+              slot="end"
+            ></ion-icon>
+            <ion-label>Settings</ion-label>
+          </ion-item>
+          <ion-menu-toggle auto-hide="false">
+            <ion-list
+              *ngIf="isSettingMenuVisible"
+              class="ion-margin-start ion-no-padding"
             >
-              <ion-icon slot="start" name="settings"></ion-icon>
-              <ion-icon
-                name="chevron-down-outline"
-                *ngIf="!isSettingMenuVisible"
-                slot="end"
-              ></ion-icon>
-              <ion-icon
-                name="chevron-up-outline"
-                *ngIf="isSettingMenuVisible"
-                slot="end"
-              ></ion-icon>
-              <ion-label>Settings</ion-label>
-            </ion-item>
-            <ion-list *ngIf="isSettingMenuVisible" class="ion-margin-start">
+              <ion-item
+                *ngIf="loggedIn && showSettings"
+                routerLink="/settings"
+                lines="none"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+              >
+                <ion-icon slot="start" name="terminal-outline"></ion-icon>
+
+                <ion-label>Server</ion-label>
+              </ion-item>
               <ion-item
                 *ngIf="loggedIn && showSettings"
                 routerLink="/settings/item-price"
@@ -106,19 +120,28 @@
                 <ion-icon slot="start" name="albums-outline"></ion-icon>
                 <ion-label>Credit Limit</ion-label>
               </ion-item>
+              <ion-item
+                *ngIf="loggedIn && showSettings"
+                routerLink="/settings/problem"
+                lines="none"
+                routerLinkActive="active"
+              >
+                <ion-icon slot="start" name="warning-outline"></ion-icon>
+                <ion-label>Problems</ion-label>
+              </ion-item>
             </ion-list>
-            <ion-item
-              routerDirection="'root'"
-              routerLink="/"
-              *ngIf="loggedIn"
-              (click)="logout()"
-              class="clickable"
-              lines="none"
-            >
-              <ion-icon slot="start" name="log-out"></ion-icon>
-              <ion-label>Logout</ion-label>
-            </ion-item>
           </ion-menu-toggle>
+          <ion-item
+            routerDirection="'root'"
+            routerLink="/"
+            *ngIf="loggedIn"
+            (click)="logout()"
+            class="clickable"
+            lines="none"
+          >
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
