--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -62,7 +62,7 @@
               <ion-label>Sales</ion-label>
             </ion-item>
             <ion-item
-              *ngIf="loggedIn"
+              *ngIf="loggedIn && showPurchase"
               routerLink="/purchase"
               lines="none"
               routerLinkActive="active"
