--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -194,13 +194,7 @@
               type="text"
               value="{{ salesInvoiceDetails?.status }}"
               placeholder="Status"
-              [ngStyle]="{
-                color:
-                  (salesInvoiceDetails?.status === 'To Deliver' ||
-                    salesInvoiceDetails?.status === 'Completed') === true
-                    ? 'green'
-                    : 'red'
-              }"
+              [ngStyle]="getStatusColor(salesInvoiceDetails?.status)"
             ></ion-input>
           </ion-item>
         </ion-col>
