--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -31,136 +31,72 @@
 
         <ion-list>
           <ion-menu-toggle auto-hide="false">
-            <ion-item
-              routerDirection="'root'"
-              *ngIf="!loggedIn"
-              routerLink="/"
-              (click)="login()"
-              lines="none"
-              routerLinkActive="active"
-            >
+            <ion-item routerDirection="'root'" *ngIf="!loggedIn" routerLink="/" (click)="login()" lines="none"
+              routerLinkActive="active">
               <ion-icon slot="start" name="log-in"></ion-icon>
               <ion-label>Login</ion-label>
             </ion-item>
-            <ion-item
-              routerDirection="'root'"
-              *ngIf="loggedIn"
-              routerLink="/home"
-              lines="none"
-              routerLinkActive="active"
-            >
+            <ion-item routerDirection="'root'" *ngIf="loggedIn" routerLink="/home" lines="none"
+              routerLinkActive="active">
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-item>
-            <ion-item
-              *ngIf="loggedIn"
-              routerLink="/sales"
-              lines="none"
-              routerLinkActive="active"
-            >
+            <ion-item *ngIf="loggedIn" routerLink="/sales" lines="none" routerLinkActive="active">
               <ion-icon slot="start" name="list-outline"></ion-icon>
               <ion-label>Sales</ion-label>
             </ion-item>
-            <ion-item
-              *ngIf="loggedIn && showPurchase"
-              routerLink="/purchase"
-              lines="none"
-              routerLinkActive="active"
-            >
+            <ion-item *ngIf="loggedIn && showPurchase" routerLink="/purchase" lines="none" routerLinkActive="active">
               <ion-icon slot="start" name="basket"></ion-icon>
               <ion-label>Purchase</ion-label>
             </ion-item>
-            <ion-item
-              *ngIf="loggedIn"
-              routerLink="/warranty"
-              lines="none"
-              routerLinkActive="active"
-            >
+            <ion-item *ngIf="loggedIn" routerLink="/warranty" lines="none" routerLinkActive="active">
               <ion-icon slot="start" name="repeat"></ion-icon>
               <ion-label>Warranty</ion-label>
             </ion-item>
-            <ion-item
-              *ngIf="loggedIn"
-              routerLink="/stock-entry"
-              lines="none"
-              routerLinkActive="active"
-            >
+            <ion-item *ngIf="loggedIn" routerLink="/stock-entry" lines="none" routerLinkActive="active">
               <ion-icon slot="start" name="git-compare-outline"></ion-icon>
               <ion-label>Stock Entry</ion-label>
             </ion-item>
+            <ion-item *ngIf="loggedIn" routerLink="/jobs" lines="none" routerLinkActive="active">
+              <ion-icon slot="start" name="file-tray-stacked-outline"></ion-icon>
+              <ion-label>Jobs</ion-label>
+            </ion-item>
           </ion-menu-toggle>
-          <ion-item
-            *ngIf="loggedIn && showSettings"
-            (click)="isSettingMenuVisible = !isSettingMenuVisible"
-            lines="none"
-          >
+          <ion-item *ngIf="loggedIn && showSettings" (click)="isSettingMenuVisible = !isSettingMenuVisible"
+            lines="none">
             <ion-icon slot="start" name="settings"></ion-icon>
-            <ion-icon
-              name="chevron-down-outline"
-              *ngIf="!isSettingMenuVisible"
-              slot="end"
-            ></ion-icon>
-            <ion-icon
-              name="chevron-up-outline"
-              *ngIf="isSettingMenuVisible"
-              slot="end"
-            ></ion-icon>
+            <ion-icon name="chevron-down-outline" *ngIf="!isSettingMenuVisible" slot="end"></ion-icon>
+            <ion-icon name="chevron-up-outline" *ngIf="isSettingMenuVisible" slot="end"></ion-icon>
             <ion-label>Settings</ion-label>
           </ion-item>
           <ion-menu-toggle auto-hide="false">
-            <ion-list
-              *ngIf="isSettingMenuVisible"
-              class="ion-margin-start ion-no-padding"
-            >
-              <ion-item
-                *ngIf="loggedIn && showSettings"
-                routerLink="/settings"
-                lines="none"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-              >
+            <ion-list *ngIf="isSettingMenuVisible" class="ion-margin-start ion-no-padding">
+              <ion-item *ngIf="loggedIn && showSettings" routerLink="/settings" lines="none" routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }">
                 <ion-icon slot="start" name="terminal-outline"></ion-icon>
 
                 <ion-label>Server</ion-label>
               </ion-item>
-              <ion-item
-                *ngIf="loggedIn && showSettings"
-                routerLink="/settings/item-price"
-                lines="none"
-                routerLinkActive="active"
-              >
+              <ion-item *ngIf="loggedIn && showSettings" routerLink="/settings/item-price" lines="none"
+                routerLinkActive="active">
                 <ion-icon slot="start" name="wallet-outline"></ion-icon>
 
                 <ion-label> Item Price</ion-label>
               </ion-item>
-              <ion-item
-                *ngIf="loggedIn && showSettings"
-                routerLink="/settings/credit-limit"
-                lines="none"
-                routerLinkActive="active"
-              >
+              <ion-item *ngIf="loggedIn && showSettings" routerLink="/settings/credit-limit" lines="none"
+                routerLinkActive="active">
                 <ion-icon slot="start" name="albums-outline"></ion-icon>
                 <ion-label>Credit Limit</ion-label>
               </ion-item>
-              <ion-item
-                *ngIf="loggedIn && showSettings"
-                routerLink="/settings/problem"
-                lines="none"
-                routerLinkActive="active"
-              >
+              <ion-item *ngIf="loggedIn && showSettings" routerLink="/settings/problem" lines="none"
+                routerLinkActive="active">
                 <ion-icon slot="start" name="warning-outline"></ion-icon>
                 <ion-label>Problems</ion-label>
               </ion-item>
             </ion-list>
           </ion-menu-toggle>
-          <ion-item
-            routerDirection="'root'"
-            routerLink="/"
-            *ngIf="loggedIn"
-            (click)="logout()"
-            class="clickable"
-            lines="none"
-          >
+          <ion-item routerDirection="'root'" routerLink="/" *ngIf="loggedIn" (click)="logout()" class="clickable"
+            lines="none">
             <ion-icon slot="start" name="log-out"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
